# door_cardreader

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ScopeGuard.cpp  build-and-run-docker.sh  build-and-run-local.sh  docker-compose.yml  exceptions.cpp  format.cpp  freefare_errorcodes.h  install-application.cpp  keyfile.h  libnfc.conf  mifareinfo.cpp  read.cpp  reference.cpp
keys/: generate-keys.sh
src/: CMakeLists.txt  ScopeGuard.cpp  ScopeGuard.h  exceptions.cpp  exceptions.h  format.cpp  install-application.cpp  nfc.cpp  read.cpp
